--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_speed_dial: ^7.0.0
   get: ^4.6.5
-  animated_toggle_switch: ^0.8.4
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
