--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   get: ^4.6.5
   http: ^1.1.0
-  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - Assets\Photos\NewsReader.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
